// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markdown converts acceptance.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "HELLO",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "!",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " This is the contract editor.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "And below is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "clause",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "info": "<clause src=\\"ap://acceptance-of-delivery@0.12.1#721d1aa0999a5d278653e211ae2a64b75fdd8ca6fa1f34255533c942404c5c1f\\" clauseid=\\"479adbb4-dc55-4d1a-ab12-b6c5e16900c0\\">",
      "tag": Object {
        "$class": "org.accordproject.commonmark.TagInfo",
        "attributeString": "src = \\"ap://acceptance-of-delivery@0.12.1#721d1aa0999a5d278653e211ae2a64b75fdd8ca6fa1f34255533c942404c5c1f\\" clauseid = \\"479adbb4-dc55-4d1a-ab12-b6c5e16900c0\\" ",
        "attributes": Array [
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "src",
            "value": "ap://acceptance-of-delivery@0.12.1#721d1aa0999a5d278653e211ae2a64b75fdd8ca6fa1f34255533c942404c5c1f",
          },
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "clauseid",
            "value": "479adbb4-dc55-4d1a-ab12-b6c5e16900c0",
          },
        ],
        "closed": false,
        "content": "",
        "tagName": "clause",
      },
      "text": "Acceptance of Delivery. <variable id=\\"shipper\\" value=\\"%22Party%20A%22\\"/> will be deemed to have completed its delivery obligations if in <variable id=\\"receiver\\" value=\\"%22Party%20B%22\\"/>'s opinion, the <variable id=\\"deliverable\\" value=\\"%22Widgets%22\\"/> satisfies the Acceptance Criteria, and <variable id=\\"receiver\\" value=\\"%22Party%20B%22\\"/> notifies <variable id=\\"shipper\\" value=\\"%22Party%20A%22\\"/> in writing that it is accepting the <variable id=\\"deliverable\\" value=\\"%22Widgets%22\\"/>.

Inspection and Notice. <variable id=\\"receiver\\" value=\\"%22Party%20B%22\\"/> will have <variable id=\\"businessDays\\" value=\\"10\\"/> Business Days' to inspect and evaluate the <variable id=\\"deliverable\\" value=\\"%22Widgets%22\\"/> on the delivery date before notifying <variable id=\\"shipper\\" value=\\"%22Party%20A%22\\"/> that it is either accepting or rejecting the <variable id=\\"deliverable\\" value=\\"%22Widgets%22\\"/>.

Acceptance Criteria. The \\"Acceptance Criteria\\" are the specifications the <variable id=\\"deliverable\\" value=\\"%22Widgets%22\\"/> must meet for the <variable id=\\"shipper\\" value=\\"%22Party%20A%22\\"/> to comply with its requirements and obligations under this agreement, detailed in <variable id=\\"attachment\\" value=\\"%22Attachment%20X%22\\"/>, attached to this agreement.
",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts blockquote.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.BlockQuote",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Paragraph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "A quote.",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts clause.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a fixed interest loan to the amount of ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "tag": Object {
            "$class": "org.accordproject.commonmark.TagInfo",
            "attributeString": "id = \\"loanAmount\\" value = \\"100000.0\\" ",
            "attributes": Array [
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "id",
                "value": "loanAmount",
              },
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "value",
                "value": "100000.0",
              },
            ],
            "closed": true,
            "content": "",
            "tagName": "variable",
          },
          "text": "<variable id=\\"loanAmount\\" value=\\"100000.0\\"/>",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "at the yearly interest rate of ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "tag": Object {
            "$class": "org.accordproject.commonmark.TagInfo",
            "attributeString": "id = \\"rate\\" value = \\"2.5\\" ",
            "attributes": Array [
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "id",
                "value": "rate",
              },
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "value",
                "value": "2.5",
              },
            ],
            "closed": true,
            "content": "",
            "tagName": "variable",
          },
          "text": "<variable id=\\"rate\\" value=\\"2.5\\"/>",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "%",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "with a loan term of ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "tag": Object {
            "$class": "org.accordproject.commonmark.TagInfo",
            "attributeString": "id = \\"loanDuration\\" value = \\"15\\" ",
            "attributes": Array [
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "id",
                "value": "loanDuration",
              },
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "value",
                "value": "15",
              },
            ],
            "closed": true,
            "content": "",
            "tagName": "variable",
          },
          "text": "<variable id=\\"loanDuration\\" value=\\"15\\"/>",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ",",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "and monthly payments of ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "tag": Object {
            "$class": "org.accordproject.commonmark.TagInfo",
            "attributeString": "value = \\"667.0\\" ",
            "attributes": Array [
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "value",
                "value": "667.0",
              },
            ],
            "closed": true,
            "content": "",
            "tagName": "computed",
          },
          "text": "<computed value=\\"667.0\\"/>",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a fixed interest loan to the amount of 100000.0",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "at the yearly interest rate of 2.5%",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "with a loan term of 15,",
        },
        Object {
          "$class": "org.accordproject.commonmark.Softbreak",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "and monthly payments of 667.0",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "info": "<clause src=\\"foo\\" clauseid=\\"bar\\"/>",
      "tag": Object {
        "$class": "org.accordproject.commonmark.TagInfo",
        "attributeString": "src = \\"foo\\" clauseid = \\"bar\\" ",
        "attributes": Array [
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "src",
            "value": "foo",
          },
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "clauseid",
            "value": "bar",
          },
        ],
        "closed": true,
        "content": "",
        "tagName": "clause",
      },
      "text": "this is
multiline <variable id=\\"rate\\" value=\\"2.5\\"/>

content
",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts codeblock.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "text": "this is a multiline
code
block.
",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts codeblock-info.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.CodeBlock",
      "info": "<video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"/>",
      "tag": Object {
        "$class": "org.accordproject.commonmark.TagInfo",
        "attributeString": "src = \\"https://www.youtube.com/embed/dQw4w9WgXcQ\\" ",
        "attributes": Array [
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "src",
            "value": "https://www.youtube.com/embed/dQw4w9WgXcQ",
          },
        ],
        "closed": true,
        "content": "",
        "tagName": "video",
      },
      "text": "  this is a multiline
  code

  containing a newline

  which should be handled by the video plugin.
",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts emph.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "some",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts emph-strong.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Emph",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Strong",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "some",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts h1.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading One",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts h2.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "2",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Two",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts h3.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "3",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Three",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts h4.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "4",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Four",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts h5.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "5",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Five",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts h6.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "6",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading Six",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts html-inline.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a ",
        },
        Object {
          "$class": "org.accordproject.commonmark.HtmlInline",
          "tag": Object {
            "$class": "org.accordproject.commonmark.TagInfo",
            "attributeString": "src = \\"property\\" ",
            "attributes": Array [
              Object {
                "$class": "org.accordproject.commonmark.Attribute",
                "name": "src",
                "value": "property",
              },
            ],
            "closed": true,
            "content": "",
            "tagName": "custom",
          },
          "text": "<custom src=\\"property\\"/>",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " property.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts html-mixed.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading One",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "tag": Object {
        "$class": "org.accordproject.commonmark.TagInfo",
        "attributeString": "src = \\"https://www.youtube.com/embed/dQw4w9WgXcQ\\" ",
        "attributes": Array [
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "src",
            "value": "https://www.youtube.com/embed/dQw4w9WgXcQ",
          },
        ],
        "closed": true,
        "content": "",
        "tagName": "video",
      },
      "text": "<video src=\\"https://www.youtube.com/embed/dQw4w9WgXcQ\\"/>",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts inline-code.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "inline code",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts link.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Link",
          "destination": "http://clause.io",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "a link",
            },
          ],
          "title": "",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts multiline-html-block.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is a custom",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.HtmlBlock",
      "tag": Object {
        "$class": "org.accordproject.commonmark.TagInfo",
        "attributeString": "src = \\"property\\" ",
        "attributes": Array [
          Object {
            "$class": "org.accordproject.commonmark.Attribute",
            "name": "src",
            "value": "property",
          },
        ],
        "closed": false,
        "content": "
contents
",
        "tagName": "custom",
      },
      "text": "<custom src=\\"property\\">
contents
</custom>",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "block.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts ol.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an ordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "false",
      "type": "ordered",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts ol-tight.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an ordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "delimiter": "period",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts paragraphs.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is first paragraph.",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is second paragraph.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts strong.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Strong",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Text",
              "text": "some",
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts text.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is some text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts thematicbreak.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.ThematicBreak",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "A footer.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts ul.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an unordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "tight": "false",
      "type": "bullet",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown converts ul-tight.md to concerto JSON 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is an unordered list:",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.List",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        Object {
          "$class": "org.accordproject.commonmark.Item",
          "nodes": Array [
            Object {
              "$class": "org.accordproject.commonmark.Paragraph",
              "nodes": Array [
                Object {
                  "$class": "org.accordproject.commonmark.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "tight": "true",
      "type": "bullet",
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`readme converts example1 to html 1`] = `
Object {
  "$class": "org.accordproject.commonmark.Document",
  "nodes": Array [
    Object {
      "$class": "org.accordproject.commonmark.Heading",
      "level": "1",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Heading",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "This is some ",
        },
        Object {
          "$class": "org.accordproject.commonmark.Code",
          "text": "code",
        },
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": ".",
        },
      ],
    },
    Object {
      "$class": "org.accordproject.commonmark.Paragraph",
      "nodes": Array [
        Object {
          "$class": "org.accordproject.commonmark.Text",
          "text": "Fin.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`readme converts example1 to html 2`] = `
"My New Heading
====

This is some \`code\`.

Fin."
`;
